Code adapté aux nouvelles versions & Notes d'installation dans le readme

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +55,14 @@
     "    # Normalise the features\n",
     "    features_numpy = normalize_data(train_df, False) #parameters.normalise_individual_subjects\n",
     "    input_dim = features_numpy.shape[1]\n",
-    "    print(f\"Number of features: {input_dim}\")\n",
     "\n",
     "    del train_df\n",
     "\n",
     "    subj = np.unique(subjects)\n",
-    "    print(f\"Sujets: {subj}\")\n",
     "\n",
     "    test_idx = np.array([subj[0]])\n",
-    "    print(f\"test: {test_idx}\")\n",
     "\n",
     "    train_idx = np.setxor1d(subj, test_idx)\n",
-    "    print(f\"Train subjects: {train_idx}\")\n",
     "\n",
     "    print(\"Generating train/val/test split...\")\n",
     "    features_train, targets_train, features_test, targets_test = split_train_test(targets_numpy, features_numpy, subjects, train_idx, test_idx)\n",
@@ -80,8 +76,6 @@
     "    else:\n",
     "      features_test, targets_test = split_sequence_nooverlap(features_test, targets_test, parameters.test_seq_dim, parameters.test_overlap_size)\n",
     "\n",
-    "    #print(f\"Number of training examples: {len(targets_train)}\")\n",
-    "    #print(f\"Number of test examples: {len(targets_test)}\")\n",
     "\n",
     "    # Create feature and targets tensor for train set. We need variable to accumulate gradients. Therefore first we create tensor, then we will create variable\n",
     "    featuresTrain = torch.from_numpy(features_train)\n",
@@ -206,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,77 +220,45 @@
      "text": [
       "\t\titer 0\n",
       "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "Number of features: 100\n",
-      "Sujets: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "test: [0]\n",
-      "Train subjects: [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
       "Generating train/val/test split...\n",
       "Generating sequences...\n",
       "Number of classes: 2\n",
       "Already_done ../inception_time_root_dir//results/inception/TSC/ All_Subs_Diff_Modules_nofilter_withoutAUc\n",
       "\t\titer 1\n",
       "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "Number of features: 100\n",
-      "Sujets: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "test: [0]\n",
-      "Train subjects: [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
       "Generating train/val/test split...\n",
       "Generating sequences...\n",
       "Number of classes: 2\n",
-      "Already_done ../inception_time_root_dir//results/inception/TSC_itr_1/ All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "\t\titer 2\n",
-      "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "Number of features: 100\n",
-      "Sujets: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "test: [0]\n",
-      "Train subjects: [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "Generating train/val/test split...\n",
-      "Generating sequences...\n",
-      "Number of classes: 2\n",
-      "Already_done ../inception_time_root_dir//results/inception/TSC_itr_2/ All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "\t\titer 3\n",
-      "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "Number of features: 100\n",
-      "Sujets: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "test: [0]\n",
-      "Train subjects: [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "Generating train/val/test split...\n",
-      "Generating sequences...\n",
-      "Number of classes: 2\n",
-      "Already_done ../inception_time_root_dir//results/inception/TSC_itr_3/ All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "\t\titer 4\n",
-      "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
-      "Number of features: 100\n",
-      "Sujets: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "test: [0]\n",
-      "Train subjects: [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "Generating train/val/test split...\n",
-      "Generating sequences...\n",
-      "Number of classes: 2\n",
-      "Already_done ../inception_time_root_dir//results/inception/TSC_itr_4/ All_Subs_Diff_Modules_nofilter_withoutAUc\n"
+      "WARNING:tensorflow:From c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\keras\\src\\backend.py:6642: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
+      "Error: No GPU devices available\n"
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "../inception_time_root_dir//archives/TSC/All_Subs_Diff_Modules_nofilter_withoutAUc/All_Subs_Diff_Modules_nofilter_withoutAUc_TRAIN not found.",
+     "ename": "SystemExit",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\main.ipynb Cell 5\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/InceptionTime/main.ipynb#W4sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m \u001b[39m# run the ensembling of these iterations of Inception\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/InceptionTime/main.ipynb#W4sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m classifier_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnne\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/InceptionTime/main.ipynb#W4sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m datasets_dict \u001b[39m=\u001b[39m read_all_datasets(root_dir, archive_name)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/InceptionTime/main.ipynb#W4sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m tmp_output_directory \u001b[39m=\u001b[39m root_dir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/results/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m classifier_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m archive_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/InceptionTime/main.ipynb#W4sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m \u001b[39mfor\u001b[39;00m dataset_name \u001b[39min\u001b[39;00m utils\u001b[39m.\u001b[39mconstants\u001b[39m.\u001b[39mdataset_names_for_archive[archive_name]:\n",
-      "File \u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\utils\\utils.py:77\u001b[0m, in \u001b[0;36mread_all_datasets\u001b[1;34m(root_dir, archive_name)\u001b[0m\n\u001b[0;32m     75\u001b[0m root_dir_dataset \u001b[39m=\u001b[39m root_dir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/archives/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m archive_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m dataset_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     76\u001b[0m file_name \u001b[39m=\u001b[39m root_dir_dataset \u001b[39m+\u001b[39m dataset_name\n\u001b[1;32m---> 77\u001b[0m x_train, y_train \u001b[39m=\u001b[39m readucr(file_name \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m_TRAIN\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     78\u001b[0m x_test, y_test \u001b[39m=\u001b[39m readucr(file_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_TEST\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     80\u001b[0m datasets_dict[dataset_name] \u001b[39m=\u001b[39m (x_train\u001b[39m.\u001b[39mcopy(), y_train\u001b[39m.\u001b[39mcopy(), x_test\u001b[39m.\u001b[39mcopy(),\n\u001b[0;32m     81\u001b[0m                                y_test\u001b[39m.\u001b[39mcopy())\n",
-      "File \u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\utils\\utils.py:31\u001b[0m, in \u001b[0;36mreaducr\u001b[1;34m(filename, delimiter)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreaducr\u001b[39m(filename, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m---> 31\u001b[0m     data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mloadtxt(filename, delimiter\u001b[39m=\u001b[39;49mdelimiter)\n\u001b[0;32m     32\u001b[0m     Y \u001b[39m=\u001b[39m data[:, \u001b[39m0\u001b[39m]\n\u001b[0;32m     33\u001b[0m     X \u001b[39m=\u001b[39m data[:, \u001b[39m1\u001b[39m:]\n",
-      "File \u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\numpy\\lib\\npyio.py:1373\u001b[0m, in \u001b[0;36mloadtxt\u001b[1;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, quotechar, like)\u001b[0m\n\u001b[0;32m   1370\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(delimiter, \u001b[39mbytes\u001b[39m):\n\u001b[0;32m   1371\u001b[0m     delimiter \u001b[39m=\u001b[39m delimiter\u001b[39m.\u001b[39mdecode(\u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m-> 1373\u001b[0m arr \u001b[39m=\u001b[39m _read(fname, dtype\u001b[39m=\u001b[39;49mdtype, comment\u001b[39m=\u001b[39;49mcomment, delimiter\u001b[39m=\u001b[39;49mdelimiter,\n\u001b[0;32m   1374\u001b[0m             converters\u001b[39m=\u001b[39;49mconverters, skiplines\u001b[39m=\u001b[39;49mskiprows, usecols\u001b[39m=\u001b[39;49musecols,\n\u001b[0;32m   1375\u001b[0m             unpack\u001b[39m=\u001b[39;49munpack, ndmin\u001b[39m=\u001b[39;49mndmin, encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[0;32m   1376\u001b[0m             max_rows\u001b[39m=\u001b[39;49mmax_rows, quote\u001b[39m=\u001b[39;49mquotechar)\n\u001b[0;32m   1378\u001b[0m \u001b[39mreturn\u001b[39;00m arr\n",
-      "File \u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\numpy\\lib\\npyio.py:992\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(fname, delimiter, comment, quote, imaginary_unit, usecols, skiplines, max_rows, converters, ndmin, unpack, dtype, encoding)\u001b[0m\n\u001b[0;32m    990\u001b[0m     fname \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mfspath(fname)\n\u001b[0;32m    991\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(fname, \u001b[39mstr\u001b[39m):\n\u001b[1;32m--> 992\u001b[0m     fh \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mlib\u001b[39m.\u001b[39;49m_datasource\u001b[39m.\u001b[39;49mopen(fname, \u001b[39m'\u001b[39;49m\u001b[39mrt\u001b[39;49m\u001b[39m'\u001b[39;49m, encoding\u001b[39m=\u001b[39;49mencoding)\n\u001b[0;32m    993\u001b[0m     \u001b[39mif\u001b[39;00m encoding \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    994\u001b[0m         encoding \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(fh, \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\numpy\\lib\\_datasource.py:193\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[0;32m    156\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    157\u001b[0m \u001b[39mOpen `path` with `mode` and return the file object.\u001b[39;00m\n\u001b[0;32m    158\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    189\u001b[0m \n\u001b[0;32m    190\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    192\u001b[0m ds \u001b[39m=\u001b[39m DataSource(destpath)\n\u001b[1;32m--> 193\u001b[0m \u001b[39mreturn\u001b[39;00m ds\u001b[39m.\u001b[39;49mopen(path, mode, encoding\u001b[39m=\u001b[39;49mencoding, newline\u001b[39m=\u001b[39;49mnewline)\n",
-      "File \u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\numpy\\lib\\_datasource.py:533\u001b[0m, in \u001b[0;36mDataSource.open\u001b[1;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[0;32m    530\u001b[0m     \u001b[39mreturn\u001b[39;00m _file_openers[ext](found, mode\u001b[39m=\u001b[39mmode,\n\u001b[0;32m    531\u001b[0m                               encoding\u001b[39m=\u001b[39mencoding, newline\u001b[39m=\u001b[39mnewline)\n\u001b[0;32m    532\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 533\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m not found.\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: ../inception_time_root_dir//archives/TSC/All_Subs_Diff_Modules_nofilter_withoutAUc/All_Subs_Diff_Modules_nofilter_withoutAUc_TRAIN not found."
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\InceptionTime\\env\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3558: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
    "source": [
     "############################################### main\n",
-    "root_dir = '../inception_time_root_dir/'\n",
+    "root_dir = '../inception_time_root_dir'\n",
     "xps = ['use_bottleneck', 'use_residual', 'nb_filters', 'depth',\n",
     "       'kernel_size', 'batch_size']\n",
     "\n",
