--- a/main.ipynb
+++ b/main.ipynb
@@ -122,6 +122,7 @@
     "    x_test = tf.convert_to_tensor(x_test, dtype=tf.float32)\n",
     "    y_true = tf.convert_to_tensor(y_true, dtype=tf.float32)\n",
     "    y_true_train = tf.convert_to_tensor(y_true_train, dtype=tf.float32)\n",
+    "    \n",
     "    return x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc"
    ]
   },
@@ -131,37 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_data(list_targets):\n",
-    "\n",
-    "    \"\"\"\n",
-    "    x_train = datasets_dict[dataset_name][0]\n",
-    "    y_train = datasets_dict[dataset_name][1]\n",
-    "    x_test = datasets_dict[dataset_name][2]\n",
-    "    y_test = datasets_dict[dataset_name][3]\n",
-    "\n",
-    "    nb_classes = len(np.unique(np.concatenate((y_train, y_test), axis=0)))\n",
-    "\n",
-    "    # make the min to zero of labels\n",
-    "    y_train, y_test = transform_labels(y_train, y_test)\n",
-    "\n",
-    "    # save orignal y because later we will use binary\n",
-    "    y_true = y_test.astype(np.int64)\n",
-    "    y_true_train = y_train.astype(np.int64)\n",
-    "    # transform the labels from integers to one hot vectors\n",
-    "    enc = sklearn.preprocessing.OneHotEncoder()\n",
-    "    enc.fit(np.concatenate((y_train, y_test), axis=0).reshape(-1, 1))\n",
-    "    y_train = enc.transform(y_train.reshape(-1, 1)).toarray()\n",
-    "    y_test = enc.transform(y_test.reshape(-1, 1)).toarray()\n",
-    "\n",
-    "    if len(x_train.shape) == 2:  # if univariate\n",
-    "        # add a dimension to make it multivariate with one dimension\n",
-    "        x_train = x_train.reshape((x_train.shape[0], x_train.shape[1], 1))\n",
-    "        x_test = x_test.reshape((x_test.shape[0], x_test.shape[1], 1))\"\"\"\n",
-    "\n",
-    "    return x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc\n",
-    "\n",
-    "\n",
-    "def fit_classifier():\n",
+    "def fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory):\n",
     "    input_shape = x_train.shape[1:]\n",
     "\n",
     "    classifier = create_classifier(classifier_name, input_shape, nb_classes,\n",
@@ -197,9 +168,7 @@
     "        xp_arr = [8, 64]\n",
     "    else:\n",
     "        raise Exception('wrong argument')\n",
-    "    return xp_arr\n",
-    "\n",
-    "\n"
+    "    return xp_arr"
    ]
   },
   {
@@ -210,7 +179,22 @@
    "source": [
     "# to remove\n",
     "csv_file = \"../inception_time_root_dir/archives/All_Subs_Diff_Modules_nofilter_withoutAUc.csv\"\n",
-    "train_df = pd.read_csv(csv_file,  delimiter=\",\")  # 101 features (only AU_r)\n"
+    "train_df = pd.read_csv(csv_file,  delimiter=\",\")  # 101 features (only AU_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Parameters\n",
+    "option = 'InceptionTime'\n",
+    "list_targets = [0, 3]\n",
+    "list_labels = [0, 1]\n",
+    "root_dir = '../inception_time_root_dir'\n",
+    "xps = ['use_bottleneck', 'use_residual', 'nb_filters', 'depth',\n",
+    "       'kernel_size', 'batch_size']"
    ]
   },
   {
@@ -283,24 +267,12 @@
    ],
    "source": [
     "############################################### main\n",
-    "root_dir = '../inception_time_root_dir'\n",
-    "xps = ['use_bottleneck', 'use_residual', 'nb_filters', 'depth',\n",
-    "       'kernel_size', 'batch_size']\n",
-    "\n",
-    "sys.argv = ['main.py', 'InceptionTime']\n",
-    "\n",
-    "list_targets = [0, 3]\n",
-    "list_labels = [0, 1]\n",
-    "\n",
-    "if sys.argv[1] == 'InceptionTime':\n",
+    "if option == 'InceptionTime':\n",
     "    # run nb_iter_ iterations of Inception on the whole TSC archive\n",
     "    classifier_name = 'inception'\n",
     "    archive_name = ARCHIVE_NAMES[0]\n",
+    "    dataset_name = utils.constants.dataset_names_for_archive[archive_name]\n",
     "    nb_iter_ = 5\n",
-    "\n",
-    "    #datasets_dict = read_all_datasets(root_dir, archive_name)\n",
-    "    #csv_file = \"../inception_time_root_dir/archives/All_Subs_Diff_Modules_nofilter_withoutAUc.csv\"\n",
-    "    #train_df = pd.read_csv(csv_file,  delimiter=\",\")  # 101 features (only AU_r)\n",
     "\n",
     "    for iter in range(nb_iter_):\n",
     "        print('\\t\\titer', iter)\n",
@@ -311,27 +283,27 @@
     "\n",
     "        tmp_output_directory = root_dir + '/results/' + classifier_name + '/' + archive_name + trr + '/'\n",
     "\n",
-    "        for dataset_name in utils.constants.dataset_names_for_archive[archive_name]:\n",
-    "            print('\\t\\t\\tdataset_name: ', dataset_name)\n",
+    "        print('\\t\\t\\tdataset_name: ', dataset_name)\n",
     "\n",
-    "            #x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data(list_targets)\n",
-    "            x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
+    "        #x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data(list_targets)\n",
+    "        x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
     "\n",
-    "            output_directory = tmp_output_directory + dataset_name + '/'\n",
+    "        output_directory = tmp_output_directory + dataset_name + '/'\n",
     "\n",
-    "            temp_output_directory = create_directory(output_directory)\n",
+    "        temp_output_directory = create_directory(output_directory)\n",
     "\n",
-    "            if temp_output_directory is None:\n",
-    "                print('Already_done', tmp_output_directory, dataset_name)\n",
-    "                continue\n",
+    "        if temp_output_directory is None:\n",
+    "            print('Already_done', tmp_output_directory, dataset_name)\n",
+    "            continue\n",
     "\n",
-    "            fit_classifier()\n",
+    "        fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\n",
     "\n",
-    "            print('\\t\\t\\t\\tDONE')\n",
+    "        print('\\t\\t\\t\\tDONE')\n",
     "\n",
-    "            # the creation of this directory means\n",
-    "            create_directory(output_directory + '/DONE')\n",
+    "        # the creation of this directory means\n",
+    "        create_directory(output_directory + '/DONE')\n",
     "\n",
+    "    print('\\t\\Running InceptionTime on the whole TSC archive')\n",
     "    # run the ensembling of these iterations of Inception\n",
     "    classifier_name = 'nne'\n",
     "\n",
@@ -339,19 +311,15 @@
     "\n",
     "    tmp_output_directory = root_dir + '/results/' + classifier_name + '/' + archive_name + '/'\n",
     "\n",
-    "    for dataset_name in utils.constants.dataset_names_for_archive[archive_name]:\n",
-    "        print('\\t\\t\\tdataset_name: ', dataset_name)\n",
+    "    x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
     "\n",
-    "        #x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data()\n",
-    "        x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
+    "    output_directory = tmp_output_directory + dataset_name + '/'\n",
     "\n",
-    "        output_directory = tmp_output_directory + dataset_name + '/'\n",
+    "    fit_classifier()\n",
     "\n",
-    "        fit_classifier()\n",
+    "    print('\\t\\t\\t\\tDONE')\n",
     "\n",
-    "        print('\\t\\t\\t\\tDONE')\n",
-    "\n",
-    "elif sys.argv[1] == 'InceptionTime_xp':\n",
+    "elif option == 'InceptionTime_xp':\n",
     "    # this part is for running inception with the different hyperparameters\n",
     "    # listed in the paper, on the whole TSC archive\n",
     "    archive_name = 'TSC'\n",
@@ -437,11 +405,11 @@
     "\n",
     "                classifier.fit(x_train, y_train, x_test, y_test, y_true)\n",
     "\n",
-    "elif sys.argv[1] == 'run_length_xps':\n",
+    "elif option == 'run_length_xps':\n",
     "    # this is to generate the archive for the length experiments\n",
     "    run_length_xps(root_dir)\n",
     "\n",
-    "elif sys.argv[1] == 'generate_results_csv':\n",
+    "elif option == 'generate_results_csv':\n",
     "    clfs = []\n",
     "    itr = '-0-1-2-3-4-'\n",
     "    inceptionTime = 'nne/inception'\n",
