fixed deprecation error + lowered nb epochs and nb iterations

--- a/main.ipynb
+++ b/main.ipynb
@@ -143,6 +143,7 @@
     "\n",
     "def create_classifier(classifier_name, input_shape, nb_classes, output_directory,\n",
     "                      verbose=False, build=True):\n",
+    "    print(\"Creating Classifier\\n\")\n",
     "    if classifier_name == 'nne':\n",
     "        from classifiers import nne\n",
     "        return nne.Classifier_NNE(output_directory, input_shape,\n",
@@ -272,7 +273,7 @@
     "    classifier_name = 'inception'\n",
     "    archive_name = ARCHIVE_NAMES[0]\n",
     "    dataset_name = utils.constants.dataset_names_for_archive[archive_name]\n",
-    "    nb_iter_ = 5\n",
+    "    nb_iter_ = 1\n",
     "\n",
     "    for iter in range(nb_iter_):\n",
     "        print('\\t\\titer', iter)\n",
