fixed errors, now have model for all subjects but subject 3

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From h:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from utils.constants import UNIVARIATE_ARCHIVE_NAMES as ARCHIVE_NAMES\n",
     "\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
     "\n",
     "    subj = np.unique(subjects)\n",
     "\n",
-    "    test_idx = np.array([subj[0]])\n",
+    "    test_idx = np.array([subj[2]])\n",
     "\n",
     "    train_idx = np.setxor1d(subj, test_idx)\n",
     "\n",
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,13 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Parameters\n",
     "option = 'InceptionTime'\n",
-    "list_targets = [0, 3]\n",
+    "list_targets = [1, 2]\n",
     "list_labels = [0, 1]\n",
     "root_dir = '../inception_time_root_dir'\n",
     "xps = ['use_bottleneck', 'use_residual', 'nb_filters', 'depth',\n",
@@ -200,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,23 +250,52 @@
       "\n",
       "Predicting\n",
       "\n",
-      "11/11 [==============================] - 4s 301ms/step\n"
+      "12/12 [==============================] - 4s 310ms/step\n",
+      "Saving predictions\n",
+      "\n",
+      "saving Y_pred\n",
+      "\n",
+      "convert predicted from binary to integer\n",
+      "\n",
+      "df_metrics.csv saved\n",
+      "\n",
+      "1\n",
+      "\n",
+      "2\n",
+      "\n",
+      "3: df_best_model\n",
+      "\n",
+      "4: df_best_model -> train loss\n",
+      "\n",
+      "5: df_best_model -> train acc\n",
+      "\n",
+      "6: df_best_model -> number of epochs\n",
+      "\n",
+      "7: save df_best_model csv \n",
+      "\n",
+      "saving df_metrics\n",
+      "\n",
+      "clearing session, next instruction is return\n",
+      "\n",
+      "\t\t\t\tDONE\n",
+      "\t\\Running InceptionTime on the whole TSC archive\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "module 'numpy' has no attribute 'float'.\n`np.float` was a deprecated alias for the builtin `float`. To avoid this error in existing code, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations",
+     "ename": "FileNotFoundError",
+     "evalue": "../inception_time_root_dir/archives/TSC/All_Subs_Diff_Modules_nofilter_withoutAUc/All_Subs_Diff_Modules_nofilter_withoutAUc_TRAIN not found.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mAlready_done\u001b[39m\u001b[39m'\u001b[39m, tmp_output_directory, dataset_name)\n\u001b[0;32m     29\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m---> 31\u001b[0m fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\n\u001b[0;32m     33\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39mDONE\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     35\u001b[0m \u001b[39m# the creation of this directory means\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[14], line 7\u001b[0m, in \u001b[0;36mfit_classifier\u001b[1;34m(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\u001b[0m\n\u001b[0;32m      2\u001b[0m input_shape \u001b[39m=\u001b[39m x_train\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m:]\n\u001b[0;32m      4\u001b[0m classifier \u001b[39m=\u001b[39m create_classifier(classifier_name, input_shape, nb_classes,\n\u001b[0;32m      5\u001b[0m                                output_directory)\n\u001b[1;32m----> 7\u001b[0m classifier\u001b[39m.\u001b[39;49mfit(x_train, y_train, x_test, y_test, y_true)\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\classifiers\\inception.py:151\u001b[0m, in \u001b[0;36mClassifier_INCEPTION.fit\u001b[1;34m(self, x_train, y_train, x_val, y_val, y_true, plot_test_acc)\u001b[0m\n\u001b[0;32m    148\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel\u001b[39m.\u001b[39msave(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput_directory \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39mlast_model.hdf5\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    150\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPredicting\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 151\u001b[0m y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpredict(x_val, y_true, x_train, y_train, y_val,\n\u001b[0;32m    152\u001b[0m                       return_df_metrics\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m    154\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSaving predictions\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    156\u001b[0m \u001b[39m# save predictions\u001b[39;00m\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\classifiers\\inception.py:180\u001b[0m, in \u001b[0;36mClassifier_INCEPTION.predict\u001b[1;34m(self, x_test, y_true, x_train, y_train, y_test, return_df_metrics)\u001b[0m\n\u001b[0;32m    178\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    179\u001b[0m     test_duration \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m start_time\n\u001b[1;32m--> 180\u001b[0m     save_test_duration(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moutput_directory \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mtest_duration.csv\u001b[39;49m\u001b[39m'\u001b[39;49m, test_duration)\n\u001b[0;32m    181\u001b[0m     \u001b[39mreturn\u001b[39;00m y_pred\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\utils\\utils.py:122\u001b[0m, in \u001b[0;36msave_test_duration\u001b[1;34m(file_name, test_duration)\u001b[0m\n\u001b[0;32m    121\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msave_test_duration\u001b[39m(file_name, test_duration):\n\u001b[1;32m--> 122\u001b[0m     res \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(data\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mzeros((\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39;49mfloat), index\u001b[39m=\u001b[39m[\u001b[39m0\u001b[39m],\n\u001b[0;32m    123\u001b[0m                        columns\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mtest_duration\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m    124\u001b[0m     res[\u001b[39m'\u001b[39m\u001b[39mtest_duration\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m test_duration\n\u001b[0;32m    125\u001b[0m     res\u001b[39m.\u001b[39mto_csv(file_name, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\__init__.py:352\u001b[0m, in \u001b[0;36m__getattr__\u001b[1;34m(attr)\u001b[0m\n\u001b[0;32m    347\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    348\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIn the future `np.\u001b[39m\u001b[39m{\u001b[39;00mattr\u001b[39m}\u001b[39;00m\u001b[39m` will be defined as the \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    349\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcorresponding NumPy scalar.\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mFutureWarning\u001b[39;00m, stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m    351\u001b[0m \u001b[39mif\u001b[39;00m attr \u001b[39min\u001b[39;00m __former_attrs__:\n\u001b[1;32m--> 352\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(__former_attrs__[attr])\n\u001b[0;32m    354\u001b[0m \u001b[39mif\u001b[39;00m attr \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtesting\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m    355\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtesting\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtesting\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'float'.\n`np.float` was a deprecated alias for the builtin `float`. To avoid this error in existing code, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations"
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 42\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[39m# run the ensembling of these iterations of Inception\u001b[39;00m\n\u001b[0;32m     40\u001b[0m classifier_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnne\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m---> 42\u001b[0m datasets_dict \u001b[39m=\u001b[39m read_all_datasets(root_dir, archive_name)\n\u001b[0;32m     44\u001b[0m tmp_output_directory \u001b[39m=\u001b[39m root_dir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/results/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m classifier_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m archive_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     46\u001b[0m x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc \u001b[39m=\u001b[39m test(list_targets, list_labels, \u001b[39m1\u001b[39m, train_df)\n",
+      "File \u001b[1;32mh:\\Analyse-de-conscience\\utils\\utils.py:77\u001b[0m, in \u001b[0;36mread_all_datasets\u001b[1;34m(root_dir, archive_name)\u001b[0m\n\u001b[0;32m     75\u001b[0m root_dir_dataset \u001b[39m=\u001b[39m root_dir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/archives/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m archive_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m dataset_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     76\u001b[0m file_name \u001b[39m=\u001b[39m root_dir_dataset \u001b[39m+\u001b[39m dataset_name\n\u001b[1;32m---> 77\u001b[0m x_train, y_train \u001b[39m=\u001b[39m readucr(file_name \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m_TRAIN\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     78\u001b[0m x_test, y_test \u001b[39m=\u001b[39m readucr(file_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_TEST\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     80\u001b[0m datasets_dict[dataset_name] \u001b[39m=\u001b[39m (x_train\u001b[39m.\u001b[39mcopy(), y_train\u001b[39m.\u001b[39mcopy(), x_test\u001b[39m.\u001b[39mcopy(),\n\u001b[0;32m     81\u001b[0m                                y_test\u001b[39m.\u001b[39mcopy())\n",
+      "File \u001b[1;32mh:\\Analyse-de-conscience\\utils\\utils.py:31\u001b[0m, in \u001b[0;36mreaducr\u001b[1;34m(filename, delimiter)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreaducr\u001b[39m(filename, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m---> 31\u001b[0m     data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mloadtxt(filename, delimiter\u001b[39m=\u001b[39;49mdelimiter)\n\u001b[0;32m     32\u001b[0m     Y \u001b[39m=\u001b[39m data[:, \u001b[39m0\u001b[39m]\n\u001b[0;32m     33\u001b[0m     X \u001b[39m=\u001b[39m data[:, \u001b[39m1\u001b[39m:]\n",
+      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\npyio.py:1373\u001b[0m, in \u001b[0;36mloadtxt\u001b[1;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, quotechar, like)\u001b[0m\n\u001b[0;32m   1370\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(delimiter, \u001b[39mbytes\u001b[39m):\n\u001b[0;32m   1371\u001b[0m     delimiter \u001b[39m=\u001b[39m delimiter\u001b[39m.\u001b[39mdecode(\u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m-> 1373\u001b[0m arr \u001b[39m=\u001b[39m _read(fname, dtype\u001b[39m=\u001b[39;49mdtype, comment\u001b[39m=\u001b[39;49mcomment, delimiter\u001b[39m=\u001b[39;49mdelimiter,\n\u001b[0;32m   1374\u001b[0m             converters\u001b[39m=\u001b[39;49mconverters, skiplines\u001b[39m=\u001b[39;49mskiprows, usecols\u001b[39m=\u001b[39;49musecols,\n\u001b[0;32m   1375\u001b[0m             unpack\u001b[39m=\u001b[39;49munpack, ndmin\u001b[39m=\u001b[39;49mndmin, encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[0;32m   1376\u001b[0m             max_rows\u001b[39m=\u001b[39;49mmax_rows, quote\u001b[39m=\u001b[39;49mquotechar)\n\u001b[0;32m   1378\u001b[0m \u001b[39mreturn\u001b[39;00m arr\n",
+      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\npyio.py:992\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(fname, delimiter, comment, quote, imaginary_unit, usecols, skiplines, max_rows, converters, ndmin, unpack, dtype, encoding)\u001b[0m\n\u001b[0;32m    990\u001b[0m     fname \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mfspath(fname)\n\u001b[0;32m    991\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(fname, \u001b[39mstr\u001b[39m):\n\u001b[1;32m--> 992\u001b[0m     fh \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mlib\u001b[39m.\u001b[39;49m_datasource\u001b[39m.\u001b[39;49mopen(fname, \u001b[39m'\u001b[39;49m\u001b[39mrt\u001b[39;49m\u001b[39m'\u001b[39;49m, encoding\u001b[39m=\u001b[39;49mencoding)\n\u001b[0;32m    993\u001b[0m     \u001b[39mif\u001b[39;00m encoding \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    994\u001b[0m         encoding \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(fh, \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\_datasource.py:193\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[0;32m    156\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    157\u001b[0m \u001b[39mOpen `path` with `mode` and return the file object.\u001b[39;00m\n\u001b[0;32m    158\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    189\u001b[0m \n\u001b[0;32m    190\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    192\u001b[0m ds \u001b[39m=\u001b[39m DataSource(destpath)\n\u001b[1;32m--> 193\u001b[0m \u001b[39mreturn\u001b[39;00m ds\u001b[39m.\u001b[39;49mopen(path, mode, encoding\u001b[39m=\u001b[39;49mencoding, newline\u001b[39m=\u001b[39;49mnewline)\n",
+      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\_datasource.py:533\u001b[0m, in \u001b[0;36mDataSource.open\u001b[1;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[0;32m    530\u001b[0m     \u001b[39mreturn\u001b[39;00m _file_openers[ext](found, mode\u001b[39m=\u001b[39mmode,\n\u001b[0;32m    531\u001b[0m                               encoding\u001b[39m=\u001b[39mencoding, newline\u001b[39m=\u001b[39mnewline)\n\u001b[0;32m    532\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 533\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m not found.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: ../inception_time_root_dir/archives/TSC/All_Subs_Diff_Modules_nofilter_withoutAUc/All_Subs_Diff_Modules_nofilter_withoutAUc_TRAIN not found."
      ]
     }
    ],
