--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From h:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\env\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,17 +220,14 @@
       "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
       "Generating train/val/test split...\n",
       "Generating sequences...\n",
+      "Already_done ../inception_time_root_dir/results/inception/TSC/ All_Subs_Diff_Modules_nofilter_withoutAUc\n",
+      "\t\titer 1\n",
+      "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
+      "Generating train/val/test split...\n",
+      "Generating sequences...\n",
       "Creating Classifier\n",
       "\n",
-      "WARNING:tensorflow:From h:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "\n",
-      "WARNING:tensorflow:From h:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\keras\\src\\backend.py:6642: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "\n",
       "Fitting the model\n",
-      "\n",
-      "WARNING:tensorflow:From h:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
-      "\n",
-      "WARNING:tensorflow:From h:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n"
      ]
     },
@@ -238,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "h:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\env\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
       "  saving_api.save_model(\n"
      ]
     },
@@ -250,7 +247,7 @@
       "\n",
       "Predicting\n",
       "\n",
-      "12/12 [==============================] - 4s 310ms/step\n",
+      "12/12 [==============================] - 7s 517ms/step\n",
       "Saving predictions\n",
       "\n",
       "saving Y_pred\n",
@@ -278,24 +275,174 @@
       "clearing session, next instruction is return\n",
       "\n",
       "\t\t\t\tDONE\n",
-      "\t\\Running InceptionTime on the whole TSC archive\n"
+      "\t\titer 2\n",
+      "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
+      "Generating train/val/test split...\n",
+      "Generating sequences...\n",
+      "Creating Classifier\n",
+      "\n",
+      "Fitting the model\n",
+      "\n"
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "../inception_time_root_dir/archives/TSC/All_Subs_Diff_Modules_nofilter_withoutAUc/All_Subs_Diff_Modules_nofilter_withoutAUc_TRAIN not found.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 42\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[39m# run the ensembling of these iterations of Inception\u001b[39;00m\n\u001b[0;32m     40\u001b[0m classifier_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnne\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m---> 42\u001b[0m datasets_dict \u001b[39m=\u001b[39m read_all_datasets(root_dir, archive_name)\n\u001b[0;32m     44\u001b[0m tmp_output_directory \u001b[39m=\u001b[39m root_dir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/results/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m classifier_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m archive_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     46\u001b[0m x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc \u001b[39m=\u001b[39m test(list_targets, list_labels, \u001b[39m1\u001b[39m, train_df)\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\utils\\utils.py:77\u001b[0m, in \u001b[0;36mread_all_datasets\u001b[1;34m(root_dir, archive_name)\u001b[0m\n\u001b[0;32m     75\u001b[0m root_dir_dataset \u001b[39m=\u001b[39m root_dir \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/archives/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m archive_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m dataset_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     76\u001b[0m file_name \u001b[39m=\u001b[39m root_dir_dataset \u001b[39m+\u001b[39m dataset_name\n\u001b[1;32m---> 77\u001b[0m x_train, y_train \u001b[39m=\u001b[39m readucr(file_name \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m_TRAIN\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     78\u001b[0m x_test, y_test \u001b[39m=\u001b[39m readucr(file_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_TEST\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     80\u001b[0m datasets_dict[dataset_name] \u001b[39m=\u001b[39m (x_train\u001b[39m.\u001b[39mcopy(), y_train\u001b[39m.\u001b[39mcopy(), x_test\u001b[39m.\u001b[39mcopy(),\n\u001b[0;32m     81\u001b[0m                                y_test\u001b[39m.\u001b[39mcopy())\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\utils\\utils.py:31\u001b[0m, in \u001b[0;36mreaducr\u001b[1;34m(filename, delimiter)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreaducr\u001b[39m(filename, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m---> 31\u001b[0m     data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mloadtxt(filename, delimiter\u001b[39m=\u001b[39;49mdelimiter)\n\u001b[0;32m     32\u001b[0m     Y \u001b[39m=\u001b[39m data[:, \u001b[39m0\u001b[39m]\n\u001b[0;32m     33\u001b[0m     X \u001b[39m=\u001b[39m data[:, \u001b[39m1\u001b[39m:]\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\npyio.py:1373\u001b[0m, in \u001b[0;36mloadtxt\u001b[1;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, quotechar, like)\u001b[0m\n\u001b[0;32m   1370\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(delimiter, \u001b[39mbytes\u001b[39m):\n\u001b[0;32m   1371\u001b[0m     delimiter \u001b[39m=\u001b[39m delimiter\u001b[39m.\u001b[39mdecode(\u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m-> 1373\u001b[0m arr \u001b[39m=\u001b[39m _read(fname, dtype\u001b[39m=\u001b[39;49mdtype, comment\u001b[39m=\u001b[39;49mcomment, delimiter\u001b[39m=\u001b[39;49mdelimiter,\n\u001b[0;32m   1374\u001b[0m             converters\u001b[39m=\u001b[39;49mconverters, skiplines\u001b[39m=\u001b[39;49mskiprows, usecols\u001b[39m=\u001b[39;49musecols,\n\u001b[0;32m   1375\u001b[0m             unpack\u001b[39m=\u001b[39;49munpack, ndmin\u001b[39m=\u001b[39;49mndmin, encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[0;32m   1376\u001b[0m             max_rows\u001b[39m=\u001b[39;49mmax_rows, quote\u001b[39m=\u001b[39;49mquotechar)\n\u001b[0;32m   1378\u001b[0m \u001b[39mreturn\u001b[39;00m arr\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\npyio.py:992\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(fname, delimiter, comment, quote, imaginary_unit, usecols, skiplines, max_rows, converters, ndmin, unpack, dtype, encoding)\u001b[0m\n\u001b[0;32m    990\u001b[0m     fname \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mfspath(fname)\n\u001b[0;32m    991\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(fname, \u001b[39mstr\u001b[39m):\n\u001b[1;32m--> 992\u001b[0m     fh \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mlib\u001b[39m.\u001b[39;49m_datasource\u001b[39m.\u001b[39;49mopen(fname, \u001b[39m'\u001b[39;49m\u001b[39mrt\u001b[39;49m\u001b[39m'\u001b[39;49m, encoding\u001b[39m=\u001b[39;49mencoding)\n\u001b[0;32m    993\u001b[0m     \u001b[39mif\u001b[39;00m encoding \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    994\u001b[0m         encoding \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(fh, \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\_datasource.py:193\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[0;32m    156\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    157\u001b[0m \u001b[39mOpen `path` with `mode` and return the file object.\u001b[39;00m\n\u001b[0;32m    158\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    189\u001b[0m \n\u001b[0;32m    190\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    192\u001b[0m ds \u001b[39m=\u001b[39m DataSource(destpath)\n\u001b[1;32m--> 193\u001b[0m \u001b[39mreturn\u001b[39;00m ds\u001b[39m.\u001b[39;49mopen(path, mode, encoding\u001b[39m=\u001b[39;49mencoding, newline\u001b[39m=\u001b[39;49mnewline)\n",
-      "File \u001b[1;32mh:\\Analyse-de-conscience\\inceptionTiiime\\lib\\site-packages\\numpy\\lib\\_datasource.py:533\u001b[0m, in \u001b[0;36mDataSource.open\u001b[1;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[0;32m    530\u001b[0m     \u001b[39mreturn\u001b[39;00m _file_openers[ext](found, mode\u001b[39m=\u001b[39mmode,\n\u001b[0;32m    531\u001b[0m                               encoding\u001b[39m=\u001b[39mencoding, newline\u001b[39m=\u001b[39mnewline)\n\u001b[0;32m    532\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 533\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m not found.\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: ../inception_time_root_dir/archives/TSC/All_Subs_Diff_Modules_nofilter_withoutAUc/All_Subs_Diff_Modules_nofilter_withoutAUc_TRAIN not found."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\env\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving last model\n",
+      "\n",
+      "Predicting\n",
+      "\n",
+      "12/12 [==============================] - 7s 515ms/step\n",
+      "Saving predictions\n",
+      "\n",
+      "saving Y_pred\n",
+      "\n",
+      "convert predicted from binary to integer\n",
+      "\n",
+      "df_metrics.csv saved\n",
+      "\n",
+      "1\n",
+      "\n",
+      "2\n",
+      "\n",
+      "3: df_best_model\n",
+      "\n",
+      "4: df_best_model -> train loss\n",
+      "\n",
+      "5: df_best_model -> train acc\n",
+      "\n",
+      "6: df_best_model -> number of epochs\n",
+      "\n",
+      "7: save df_best_model csv \n",
+      "\n",
+      "saving df_metrics\n",
+      "\n",
+      "clearing session, next instruction is return\n",
+      "\n",
+      "\t\t\t\tDONE\n",
+      "\t\titer 3\n",
+      "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
+      "Generating train/val/test split...\n",
+      "Generating sequences...\n",
+      "Creating Classifier\n",
+      "\n",
+      "Fitting the model\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\env\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving last model\n",
+      "\n",
+      "Predicting\n",
+      "\n",
+      "12/12 [==============================] - 9s 665ms/step\n",
+      "Saving predictions\n",
+      "\n",
+      "saving Y_pred\n",
+      "\n",
+      "convert predicted from binary to integer\n",
+      "\n",
+      "df_metrics.csv saved\n",
+      "\n",
+      "1\n",
+      "\n",
+      "2\n",
+      "\n",
+      "3: df_best_model\n",
+      "\n",
+      "4: df_best_model -> train loss\n",
+      "\n",
+      "5: df_best_model -> train acc\n",
+      "\n",
+      "6: df_best_model -> number of epochs\n",
+      "\n",
+      "7: save df_best_model csv \n",
+      "\n",
+      "saving df_metrics\n",
+      "\n",
+      "clearing session, next instruction is return\n",
+      "\n",
+      "\t\t\t\tDONE\n",
+      "\t\titer 4\n",
+      "\t\t\tdataset_name:  All_Subs_Diff_Modules_nofilter_withoutAUc\n",
+      "Generating train/val/test split...\n",
+      "Generating sequences...\n",
+      "Creating Classifier\n",
+      "\n",
+      "Fitting the model\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\env\\lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving last model\n",
+      "\n",
+      "Predicting\n",
+      "\n",
+      "12/12 [==============================] - 10s 679ms/step\n",
+      "Saving predictions\n",
+      "\n",
+      "saving Y_pred\n",
+      "\n",
+      "convert predicted from binary to integer\n",
+      "\n",
+      "df_metrics.csv saved\n",
+      "\n",
+      "1\n",
+      "\n",
+      "2\n",
+      "\n",
+      "3: df_best_model\n",
+      "\n",
+      "4: df_best_model -> train loss\n",
+      "\n",
+      "5: df_best_model -> train acc\n",
+      "\n",
+      "6: df_best_model -> number of epochs\n",
+      "\n",
+      "7: save df_best_model csv \n",
+      "\n",
+      "saving df_metrics\n",
+      "\n",
+      "clearing session, next instruction is return\n",
+      "\n",
+      "\t\t\t\tDONE\n",
+      "\t\\Running InceptionTime on the whole TSC archive\n",
+      "Generating train/val/test split...\n",
+      "Generating sequences...\n",
+      "Creating Classifier\n",
+      "\n",
+      "\t\t\t\tDONE\n"
      ]
     }
    ],
@@ -306,7 +453,7 @@
     "    classifier_name = 'inception'\n",
     "    archive_name = ARCHIVE_NAMES[0]\n",
     "    dataset_name = utils.constants.dataset_names_for_archive[archive_name][0]\n",
-    "    nb_iter_ = 1\n",
+    "    nb_iter_ = 5\n",
     "\n",
     "    for iter in range(nb_iter_):\n",
     "        print('\\t\\titer', iter)\n",
@@ -341,7 +488,6 @@
     "    # run the ensembling of these iterations of Inception\n",
     "    classifier_name = 'nne'\n",
     "\n",
-    "    datasets_dict = read_all_datasets(root_dir, archive_name)\n",
     "\n",
     "    tmp_output_directory = root_dir + '/results/' + classifier_name + '/' + archive_name + '/'\n",
     "\n",
@@ -349,7 +495,7 @@
     "\n",
     "    output_directory = tmp_output_directory + dataset_name + '/'\n",
     "\n",
-    "    fit_classifier()\n",
+    "    fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\n",
     "\n",
     "    print('\\t\\t\\t\\tDONE')\n",
     "\n",
@@ -475,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
